[package]
name = "tracker_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.178", features = ["derive"]}
redis = {version = "0.23.3", features = ["tokio-comp"]}
rand = "0.8.5"
sqlite = "0.31"
